syntax = "proto3";

option csharp_namespace = "TeamHitori.Mulplay.Shared.Poco";

package Mulplay;

// The service definition.
service GameService {
  rpc ping (Document) returns (Document);
  rpc createGame (Document) returns (Document);
  rpc startGame (Document) returns (stream Document);
  rpc startMetrics (Document) returns (stream Document);
  rpc stepGame (Document) returns (Document);
  rpc restartGame (Document) returns (Document);
  rpc destroyGame (Document) returns (Document);
  rpc playerEnter (ConnectedPlayerDocument) returns (ConnectedPlayerDocument);
  rpc playerExit (ConnectedPlayerDocument) returns (ConnectedPlayerDocument);
  rpc playerEventIn (stream ConnectedPlayerDocument) returns (Document);
  rpc playerEventOut (Document) returns (stream ConnectedPlayerDocument);
}

message Document {
	string content = 1;
	string gamePrimaryName = 2;
}

message ConnectedPlayerDocument {
	string content = 1;
	string connectionId = 2;
	string gamePrimaryName = 3;
}